--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "flowbite": "^2.2.0",
+    "flowbite-react": "^0.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
@@ -42,7 +46,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.1.1",
+    "autoprefixer": "^10.4.16",
     "jsdom": "^22.1.0",
+    "tailwindcss": "^3.3.6",
     "vite": "^4.5.1",
     "vitest": "^0.34.6"
   }
