--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "apexcharts": "^3.45.0",
     "flowbite": "^2.2.0",
     "flowbite-react": "^0.7.2",
     "react": "^18.2.0",
