--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-    "apexcharts": "^3.45.0",
+    "apexcharts": "^3.45.1",
     "flowbite": "^2.2.0",
     "flowbite-react": "^0.7.2",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
     "web-vitals": "^3.1.0"
